test/test_5.spl
int mei_huo_zheng_le(int a, float b, char c) {
    return a;
}

char yao_da_huo_ji() {
    return 'a';
}

int act(char cc) {
    return 0;
}

int main() {
    mei_huo_zheng_le(1, 2.0, 'c');
    mei_huo_zheng_le(1, 2.0, 'c', d);
    mei_huo_zheng_le(act(yao_da_huo_ji()), 2.0, yao_da_huo_ji(), 'd');
    mei_huo_zheng_le(1, 2.0);
    return 0.0;
}
